fixed spacing

--- a/main.css
+++ b/main.css
@@ -9,8 +9,8 @@ body * {
 }
 /* Navbar container */
 .navbar {
-  display: flex;
-  justify-content: left;
+  /* display: flex;
+  justify-content: left; */
   background-color: #333;
   font-family: Arial;
   position: fixed;
@@ -31,6 +31,10 @@ body * {
 .dropdown {
   float: left;
   overflow: hidden;
+}
+.navbar a,
+.dropdown {
+  margin-right: 30px;
 }
 
 /* Dropdown button */
@@ -142,21 +146,32 @@ p.project-description {
 p.project-description > a {
   font-size: 0.8em;
 }
-#contact {
+.contact {
   font-size: 1.5em;
 }
 
 footer {
   border-top: 1px solid black;
-  margin: 10px 0;
+  margin: 20px 0;
 }
-footer > address {
+
+footer .footer-spacer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 80px;
+  max-width: 800px;
   margin: 10px auto;
 }
 
+header .nav-spacer {
+  display: flex;
+  justify-content: left;
+  max-width: 800px;
+  margin: 0 auto;
+}
 @media only screen and (min-width: 800px) {
-  .content,
-  footer {
+  .content {
     margin: 0 auto;
   }
   .centering {
@@ -165,6 +180,13 @@ footer > address {
   }
   .screen-shot {
     max-width: 600px;
+  }
+}
+@media only screen and (max-width: 450px) {
+  .navbar a,
+  .dropdown {
+    margin-right: 0;
+    font-size: 1.4em;
   }
 }
 @media only screen and (max-width: 360px) {
